--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Welcome to the Game Hub!</h1>
         <div class="menu">
-            <a href="/quiz">Quiz</a>
+            <a href="/quizgame">Quiz</a>
             <a href="/tictactoe">Tic Tac Toe</a>
         </div>
     </div>
